--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Consulta proveedores</title>
 </head>
 <body>
-<h1>
-    Agenda de pagos
-</h1>    
+    <header>
+        <img id="logo" src="imagenes/Las-moras-logo.png" alt="">
+        <h1>
+            Agenda de Pagos
+            </h1>  
+    </header>
+  
     
 
 
