--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
      <input  id="ingrut" type="number"> 
     <button id="buscar">Buscar</button>
+    <div id="mostrarbusqueda"></div>
 
   </div>
 
